--- a/ejemplo4/proyectoUno/administrativo/templates/obtener_estudiante.html
+++ b/ejemplo4/proyectoUno/administrativo/templates/obtener_estudiante.html
@@ -4,9 +4,9 @@
 
 <h3>Datos de estudiante</h3>
 
-<p><b>Nombre:</b>{{estudiante.nombre}}</p>
-<p><b>Apellido:</b>{{estudiante.apellido}}</p>
-<p><b>Cédula:</b>{{estudiante.cedula}}</p>
+<p><b>Nombre:</b>{{estudiante.nombre<br>}}</p>
+<p><b>Apellido:</b>{{estudiante.apellido<br>}}</p>
+<p><b>Cédula:</b>{{estudiante.cedula<br>}}</p>
 
 <br/>
 {% endblock %}
