--- a/ejemplo1/proyectoUno/administrativo/templates/crearNumeroTelefonicoEstudiante.html
+++ b/ejemplo1/proyectoUno/administrativo/templates/crearNumeroTelefonicoEstudiante.html
@@ -1,3 +1,9 @@
+{% extends "master.html" %}
+
+{% block title %}
+    Crear numero telofonico del estudiante 
+{% endblock %}
+
 <h2>Crear Número Telefónico para {{estudiante}}</h3>
 
 <form action="" method="post">
