--- a/ejemplo1/proyectoUno/administrativo/templates/editarEstudiante.html
+++ b/ejemplo1/proyectoUno/administrativo/templates/editarEstudiante.html
@@ -1,3 +1,9 @@
+{% extends "master.html" %}
+
+{% block title %}
+    Editar estudiante
+{% endblock %}
+
 <h2>Editar Estudiante</h3>
 
 <form action="" method="post">
